# yn

./: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.mjs  load.cjs  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmark/: bench.js  package-lock.json  package.json
src/: lib.rs
