[package]
name = "yn"
version = "0.1.0"
description = "nodejs bindings to yrs"
authors = ["Bartosz Sypytkowski"]
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
yrs = "0.25.0"
